Tweak status page
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/mediafusion/branding/home.html
+++ b/apps/mediafusion/branding/home.html
@@ -26,7 +26,7 @@
 
              <div class="form-floating mb-3">
                 Watch Tamil, Hindi, Malayalam, Kannada, English, and dubbed movies & series with the MediaFusion add-on.
-                Created by Mohamed Zumair, and hosted by <A HREF="https://elfhosted.com">ElfHosted</A> / 
+                Created by Mohamed Zumair -  
                 <a href="https://github.com/mhdzumair/MediaFusion" target="_blank">Source Code on GitHub</a>.
              </div>	
 
@@ -36,7 +36,7 @@
              <h3 class="gives">Why use ElfHosted addons?</h3>
              <div class="form-floating mb-3">
                 <ul>
-                   <li>Highly-available, <A HREF="https://elfhosted.com/open/">open-source</A> infrastructure  / <A HREF="https://status.elfhosted.com/history/public-mediafusion-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-mediafusion-stremio-addon%2Fuptime.json"></A></li>
+                   <li>Highly-available, <A HREF="https://elfhosted.com/open/">open-source</A> infrastructure  / <A HREF="https://status.elfhosted.com/history/public-media-fusion-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-media-fusion-stremio-addon%2Fuptime.json"></A></li>
                    <li>Active contributors to <A HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> subreddit and <A HREF="https://discord.gg/zNRf6YF">Discord</A></li>
                    <li>Geek out over <A HREF="https://grafana.infra.elfhosted.com/public-dashboards/68a426da7b8847bc97b05a8f0e7d0de9">public performance metrics</A></li>
                 </ul>
