--- a/apps/stremio-jackett/branding/index.html
+++ b/apps/stremio-jackett/branding/index.html
@@ -30,7 +30,7 @@
         <form style="background-color: rgba(255,255,255,0.68);padding: 2rem;border-radius: 1rem">
             <img src="https://user-images.githubusercontent.com/27040483/28728094-99f3e3f6-73c7-11e7-8f8d-28912dc6ac0d.png" alt="logo" style="width: 100px;height: 100px;">
           <div class="space-y-12">
-              <p style="text-align: center">Stremio-Jackett v3.0.9 | ElfHosted</p>
+              <p style="text-align: center">Stremio-Jackett v3.1.0</p>
               <h1 class="text-base font-semibold leading-7 text-gray-900" style="text-align: center;font-size: 2rem;">Addon configuration</h1>
 
 
@@ -67,6 +67,7 @@
                   <select onchange="" id="service" name="service" autocomplete="service" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
                     <option value="realdebrid">Real-Debrid</option>
                     <option value="alldebrid">All-Debrid</option>
+                    <option value="premiumize">Premiumize</option>
                   </select>
                 </div>
               </div>
@@ -91,6 +92,21 @@
                   </div>
                 </div>
               </div>
+            </div>
+
+            <div class="border-b border-gray-900/10 pb-12">
+              <h2 class="text-base font-semibold leading-7 text-gray-900">Caching</h2>
+              <p class="mt-1 text-sm leading-6 text-gray-600">You will enter here informations about the cache</p>
+                <br>
+                <div class="relative flex gap-x-3">
+            <div class="flex h-6 items-center">
+                <input oninput="" id="cache" name="cache" value="cache" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" checked>
+            </div>
+            <div class="text-sm leading-6">
+                <label for="sizedesc" class="font-medium text-gray-900">Enable cache</label>
+                <p class="text-gray-500">Enable caching for faster results</p>
+            </div>
+        </div>
             </div>
 
             <div class="border-b border-gray-900/10 pb-12">
@@ -156,6 +172,17 @@
                       <input oninput="" id="480p" name="480p" type="checkbox" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
                       <label for="480p" class="block text-sm font-medium leading-6 text-gray-900">480p</label>
                     </div>
+
+                    <div class="flex items-center gap-x-3">
+                      <input oninput="" id="rips" name="rips" type="checkbox" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                      <label for="rips" class="block text-sm font-medium leading-6 text-gray-900">RIPs (HDRip, WEBRip, etc.)</label>
+                    </div>
+
+                    <div class="flex items-center gap-x-3">
+                      <input oninput="" id="cam" name="cam" type="checkbox" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                      <label for="cam" class="block text-sm font-medium leading-6 text-gray-900">CAMs (CAM, TS, etc.)</label>
+                    </div>
+
                   </div>
                 </fieldset>
               </div>
@@ -219,8 +246,8 @@
           </div>
 
           <div class="mt-6 flex items-center justify-center gap-x-6">
-              <a id="install" href="#" onclick="return getLink('link')" class="rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg--500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Install</a>
-              <a id="copy" href="#" onclick="return getLink('copy')" class="rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg--500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Copy</a>
+              <a id="install" onclick="return getLink('link')" class="cursor-pointer rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg--500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Install</a>
+              <a id="copy" onclick="return getLink('copy')" class="cursor-pointer rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg--500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Copy</a>
           </div>
         </form>
     </div>
@@ -241,6 +268,7 @@
             document.getElementById('maxSize').value = data.maxSize;
             document.getElementById('resultsPerQuality').value = data.resultsPerQuality;
             document.getElementById('maxResults').value = data.maxResults;
+            document.getElementById('cache').checked = data.cache;
             if (data.sort === 'quality') {
                 document.getElementById('quality').checked = true;
             }
@@ -262,7 +290,12 @@
             if (data.exclusion.includes('480p')) {
                 document.getElementById('480p').checked = true;
             }
-            ;
+            if (data.exclusion.includes('rips')) {
+                document.getElementById('rips').checked = true;
+            }
+            if (data.exclusion.includes('cam')) {
+                document.getElementById('cam').checked = true;
+            }
         }
     }
     loadData();
@@ -279,6 +312,7 @@
         let resultsPerQuality = document.getElementById('resultsPerQuality').value;
         let maxResults = document.getElementById('maxResults').value;
         let link = document.getElementById('install');
+        const cache = document.getElementById('cache').checked;
         const qualityExclusion = [];
         if (document.getElementById('4k').checked) {
             qualityExclusion.push('4k');
@@ -291,6 +325,12 @@
         }
         if (document.getElementById('480p').checked) {
             qualityExclusion.push('480p');
+        }
+        if (document.getElementById('rips').checked) {
+            qualityExclusion.push('rips');
+        }
+        if (document.getElementById('cam').checked) {
+            qualityExclusion.push('cam');
         }
         let qualityChecked = document.getElementById('quality').checked;
         let sizedescChecked = document.getElementById('sizedesc').checked;
@@ -325,7 +365,8 @@
             resultsPerQuality,
             maxResults,
             'exclusion': qualityExclusion,
-            tmdbApi
+            tmdbApi,
+            cache
         };
         if (jackettHost === '' || jackettApi === '' || debridApi === '' || tmdbApi === '') {
             alert('Please fill all the fields');
@@ -335,11 +376,20 @@
 
         if (method === 'link') {
             window.open(`stremio://${stremio_link}`, "_blank");
-        }
-        if (method === 'copy') {
-            navigator.clipboard.writeText(stremio_link);
-            alert('Link copied to clipboard');
-            return false;
+        } else if (method === 'copy') {
+            const link = window.location.protocol + '//' + stremio_link;
+
+            if (!navigator.clipboard) {
+                alert('Your browser does not support clipboard');
+                console.log(link);
+                return;
+            }
+
+            navigator.clipboard.writeText(link).then(() => {
+                alert('Link copied to clipboard');
+            }, () => {
+                alert('Error copying link to clipboard');
+            });
         }
     }
 
