--- a/apps/mediafusion/branding/home.html
+++ b/apps/mediafusion/branding/home.html
@@ -38,10 +38,10 @@
                     <ul>
                        <li>Highly-available, <A HREF="https://elfhosted.com/open/">open-source</A> infrastructure  / <A HREF="https://status.elfhosted.com/history/public-media-fusion-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-media-fusion-stremio-addon%2Fuptime.json"></A></li>
                        <li>Active contributors to <A HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> subreddit and <A HREF="https://discord.gg/zNRf6YF">Discord</A></li>
-                       <li>Geek out over <A HREF="https://grafana.infra.elfhosted.com/public-dashboards/68a426da7b8847bc97b05a8f0e7d0de9">public performance metrics</A></li>
+                       <li>Geek out over <A HREF="https://fnky.nz/grafana-mediafusion">public performance metrics</A></li>
                     </ul>
                  </div>	
-                 
+
                 <h4 class="mt-4">🔎 Advanced Scraping Capabilities</h4>
                 <p>Tap into a world of content with our enhanced scraping features:</p>
                 <ul>
