Update mediafusion branding for 3.7.4
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/mediafusion/branding/home.html
+++ b/apps/mediafusion/branding/home.html
@@ -24,11 +24,6 @@
                     This is a free, public, <A HREF="https://elfhosted.com">ElfHosted</A> instance of the MediaFusion addon, for the <A HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> community (<I><A HREF="https://github.com/funkypenguin/elf-infra/blob/main/traefik-middleware/middleware-rate-limit-public-stremio-addon.yaml">rate-limits</A> apply</I>).
                  </div>
 
-                 <div class="form-floating mb-3">
-                    Watch Tamil, Hindi, Malayalam, Kannada, English, and dubbed movies & series with the MediaFusion add-on.
-                    Created by Mohamed Zumair -  
-                    <a href="https://github.com/mhdzumair/MediaFusion" target="_blank">Source Code on GitHub</a>.
-                 </div>	
 
                  <div class="form-floating mb-3">
                     <A HREF="https://elfhosted.com">ElfHosted</A> is an <A HREF="https://elfhosted.com/open/">open-source</A> PaaS built and run by <A HREF="https://geek-cookbook.funkypenguin.co.nz">geeks</A>, which self-hosts <A HREF="https://elfhosted.com/guides/media/">your favorite streaming apps</A> for you automatically and easily. Individual, hosted <A HREF="https://store.elfhosted.com/product/mediafusion">MediaFusion instances are available</A> (<I>with more relaxed rate-limits</I>) from $0.15/day, with <A HREF="https://elfhosted.com/how-to/spend-elfbuckz/">$10 free credit</A> for <A HREF="https://store.elfhosted.com/my-account/">new accounts</A>.
@@ -66,6 +61,7 @@
                     <li>✨ Premiumize (Premium)</li>
                     <li>🏠 AllDebrid - Local Only - (Premium) (Note: AllDebrid works only when running the addon
                         locally)</li>
+                    <li>🔒 qBittorrent - WebDav (Free/Premium)</li>
                 </ul>
 
                 <h4 class="mt-4">🛠️ Enhanced Additional Features</h4>
