Remove community blurb from hosted instance
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/stremio-jackett/branding/index.html
+++ b/apps/stremio-jackett/branding/index.html
@@ -61,7 +61,7 @@
 
                 <div class="border-b border-gray-900/10 dark:border-white/50 pb-12">
                     <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">
-                        This is a free, public, <A CLASS="underline" HREF="https://elfhosted.com">ElfHosted</A> instance of the Stremio-Jackett Addon, for the Stremio community (<I><A CLASS="underline" HREF="https://github.com/funkypenguin/elf-infra/blob/main/traefik-middleware/middleware-rate-limit-public-stremio-addon.yaml">rate-limits</A> apply</I>).
+                        This is an <A CLASS="underline" HREF="https://elfhosted.com">ElfHosted</A> instance of the Stremio-Jackett Addon.
                     </p>
 
                     <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">
