Permit direct torrenting in stremio-jackett addon
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/stremio-jackett/branding/index.html
+++ b/apps/stremio-jackett/branding/index.html
@@ -153,7 +153,7 @@
                 <br>
                 <div class="relative flex gap-x-3">
                     <div class="flex items-center h-5">
-                        <input oninput="" id="torrenting" name="torrenting" value="torrenting" disabled="disabled" type="checkbox"
+                        <input oninput="" id="torrenting" name="torrenting" value="torrenting" type="checkbox"
                                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                     </div>
                     <div class="ms-2 text-sm">
@@ -161,7 +161,7 @@
                             torrenting</label>
                         <p class="text-xs font-normal text-gray-500 dark:text-gray-400">Enable direct torrenting <span
                                 class="font-bold text-red-600 dark:text-red-500">(ATTENTION: this is illegal in some
-                            countries, and disabled on ElfHosted without BYO VPN)</span></p>
+                            countries)</span></p>
                     </div>
                 </div>
             </div>
