Fix upptime badges
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/xtremio/branding/configure.html
+++ b/apps/xtremio/branding/configure.html
@@ -227,7 +227,7 @@ button:active {
          <h3 class="gives">Why use ElfHosted addons?</h3>
          <div class="form-floating mb-3">
             <ul>
-               <li>Highly-available, <A HREF="https://elfhosted.com/open/">open-source</A> infrastructure  / <A HREF="https://status.elfhosted.com/history/public-xtremio-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-xtremio-stremio-addon%2Fuptime.json"></A></li>
+               <li>Highly-available, <A HREF="https://elfhosted.com/open/">open-source</A> infrastructure  / <A HREF="https://status.elfhosted.com/history/xtremio-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fxtremio-stremio-addon%2Fuptime.json"></A></li>
                <li>Active contributors to <A HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> subreddit and <A HREF="https://discord.gg/zNRf6YF">Discord</A></li>
                <li>Geek out over <A HREF="https://grafana.elfhosted.com/public-dashboards/cecd587de25d4731b48b5752b127682a">public performance metrics</A></li>
             </ul>
