--- a/apps/stremio-jackett/branding/index.html
+++ b/apps/stremio-jackett/branding/index.html
@@ -74,11 +74,11 @@
                         Individual, hosted <A CLASS="underline" HREF="https://elfhosted.com/stremio-addons/"">Stremio Addons</A> (<I>including <A CLASS="underline" HREF="https://store.elfhosted.com/product/stremio-jackett">Stremio-Jackett</A>, if you want to customize Jackett</I>) are available from $0.10/day, with <A CLASS="underline" HREF="https://elfhosted.com/how-to/spend-elfbuckz/">$10 free credit</A> for <A CLASS="underline" HREF="https://store.elfhosted.com/my-account/">new accounts</A>.
                     </p>
 
-                    <A CLASS="underline" HREF="https://status.elfhosted.com/history/public-stremio-jackett-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-stremio-jackett-addon%2Fuptime.json"></A>
+                    <A CLASS="underline" HREF="https://status.elfhosted.com/history/stremio-jackett-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%stremio-jackett-addon%2Fuptime.json"></A>
 
                  <label for="why-elfhosted" class="block text-sm font-medium mb-2 dark:text-white">Why use ElfHosted addons?</label>
                  <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">
-                    ✅ <A CLASS="underline" HREF="https://status.elfhosted.com/history/public-stremio-jackett-addon">Highly-available</A>, <A CLASS="underline" HREF="https://elfhosted.com/open/">open-source</A> infrastructure
+                    ✅ <A CLASS="underline" HREF="https://status.elfhosted.com/history/stremio-jackett-addon">Highly-available</A>, <A CLASS="underline" HREF="https://elfhosted.com/open/">open-source</A> infrastructure
                     <br/>✅ Active contributors to <A CLASS="underline" HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> subreddit and <A CLASS="underline" HREF="https://discord.gg/zNRf6YF">Discord</A>
                     <br/>✅ Geek out over <A CLASS="underline" HREF="https://fnky.nz/grafana-stremio-jackett">public performance metrics</A>                    
                 </p>
