--- a/apps/stremio-jackett/branding/index.html
+++ b/apps/stremio-jackett/branding/index.html
@@ -71,7 +71,7 @@
                     </p>                    
 
                     <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">
-                        Individual, hosted <A CLASS="underline" HREF="https://elfhosted.com/stremio-addons/"">Stremio Addons</A> (<I>including <A CLASS="underline" HREF="https://store.elfhosted.com/product/stremio-jackett">Stremio-Jackett</A>, if you want to customize Jackett</I>) are available from $0.10/day, with <A CLASS="underline" HREF="https://elfhosted.com/how-to/spend-elfbuckz/">$10 free credit</A> for <A CLASS="underline" HREF="https://store.elfhosted.com/my-account/">new accounts</A>.
+                        Individual, hosted <A CLASS="underline" HREF="https://elfhosted.com/stremio-addons/"">Stremio Addons</A> (<I>including <A CLASS="underline" HREF="https://store.elfhosted.com/product/stremio-jackett">Stremio-Jackett</A>, if you want to customize Jackett</I>) are available.
                     </p>
 
                     <A CLASS="underline" HREF="https://status.elfhosted.com/history/stremio-jackett-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Felfhosted%2Fstatus.elfhosted.com%2Fmaster%2Fapi%stremio-jackett-addon%2Fuptime.json"></A>
