--- a/apps/formulio/branding/index.html
+++ b/apps/formulio/branding/index.html
@@ -39,7 +39,7 @@
         .hero-content {
             position: relative;
             z-index: 2;
-            background: rgba(29, 29, 29, 0.5); /* Darker semi-transparent background */
+            background: rgba(29, 29, 29, 0.85); /* Darker semi-transparent background */
             padding: 20px;
             border-radius: 30px;
         }
@@ -119,14 +119,12 @@
     <div class="hero">
         <div class="dark-overlay"></div>
         <div class="hero-content">
-            <h1>Formulio Addon</h1>
+            <h1>Formulio | ElfHosted</h1>
 
             
-
-
-
             <p>Formula Racing replays on Stremio</p>
             <div class="elfhosted">
+                <img src="https://elfhosted.com/images/logo.svg" height="100px">
                 <p>
                     This is a free, public, <A HREF="https://elfhosted.com">ElfHosted</A> instance of the <A HREF="https://github.com/TheRaceDirector/formuliodev/">Formulio</A> addon, enjoy! (<I><A HREF="https://github.com/funkypenguin/elf-infra/blob/main/traefik-middleware/middleware-rate-limit-public-stremio-addon.yaml">rate-limits</A> apply</I>)
                 </p>
