--- a/apps/formulio/branding/index.html
+++ b/apps/formulio/branding/index.html
@@ -119,31 +119,23 @@
     <div class="hero">
         <div class="dark-overlay"></div>
         <div class="hero-content">
-            <h1>Formulio | ElfHosted</h1>
+            <h1>Formulio | Hayduk</h1>
 
             
             <p>Formula Racing replays on Stremio</p>
             <div class="elfhosted">
-                <img src="https://elfhosted.com/images/logo.svg" height="100px">
                 <p>
-                    This is a free, public, <A HREF="https://elfhosted.com">ElfHosted</A> instance of the <A HREF="https://github.com/TheRaceDirector/formuliodev/">Formulio</A> addon, enjoy! (<I><A HREF="https://github.com/funkypenguin/elf-infra/blob/main/traefik-middleware/middleware-rate-limit-public-stremio-addon.yaml">rate-limits</A> apply</I>)
+                    This is a free, public instance of the <A HREF="https://github.com/TheRaceDirector/formuliodev/">Formulio</A>, initially donated by <A HREF="https://elfhosted.com">ElfHosted</A>, but now independently maintained by <A HREF="https://hayd.uk">Hayduk</A>. Enjoy!
                 </p>
-                 <P>
-                    <A HREF="https://elfhosted.com">ElfHosted</A> is an <A HREF="https://elfhosted.com/open/">open-source</A> PaaS built and run by <A HREF="https://geek-cookbook.funkypenguin.co.nz">geeks</A>, which self-hosts <A HREF="https://elfhosted.com/guides/media/">your favorite streaming apps</A> for you automatically and easily. Private, hosted Stremio Addons are available <A HREF="https://store.elfhosted.com/product-category/stremio-addons">individually</A>, or as one <A HREF="https://store.elfhosted.com/product/stremio-addons-bundle">big 'ol bundle</A>!
-            </p>	
             <h3>What is ElfHosted?</h3>
             <div>
             <p><a href="https://elfhosted.com/">ElfHosted</a> is an <a href="https://elfhosted.com/open/">open-source</a> platform for <A HREF="https://elfhosted.com/guides/media/">"self-hosting" Plex with Real Debrid</A> (<I>using <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex/">plex_debrid</A>, <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex-riven/">Riven</A>, or <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex-radarr-sonarr-prowlarr/">Radarr & Sonarr</A></I>), and your <a href="https://elfhosted.com/apps/">awesome self-hosted apps</a>, automatically and easily.</p>
-
-           <br/>
-            <p>We support the Stremio community (<A HREf="https://reddit.com/r/StremioAddons">Reddit</A> / <A HREF="https://discord.gg/zNRf6YF">Discord</A>) by providing free hosting for some of the <A HREF="https://elfhosted.com/stremio-addons/">best Stremio Addons</A>, including those which enable you to:</p>
+            <p>Among many other <A HREF="https://elfhosted.com/apps/">open-source apps</A>, ElfHosted offer private, subscription instances of the <A HREF="https://elfhosted.com/stremio-addons/">best Stremio Addons</A>, including those which enable you to:
             </div>	
-            <ul>
-               <li>👨‍👩‍👦‍👦 <A HREF="https://elfhosted.com/app/comet/">Share your Real Debrid / Stremio from multiple locations at once</A> (<I>Comet</I>)</li>
-               <li>🎁 Watch your paid <A HREF="https://elfhosted.com/app/xtremio/">IPTV with Stremio</A> (<I>Xtremio</I>)</li>
-               <li>📺 Install a <A HREF="https://elfhosted.com/app/mediafusion/">Stremio Live TV addon</A> (<I>MediaFusion</I>)</li>
-               <li>🏈 Watch recorded / live <A HREF="https://elfhosted.com/app/mediafusion/">sports with Stremio</A> (<I>MediaFusion</I>)</li>
-            </ul>
+               👨‍👩‍👦‍👦 <A HREF="https://elfhosted.com/app/comet/">Share your Real Debrid / Stremio from multiple locations at once</A> (<I>Comet</I>)<BR/>
+               🎁 Watch your paid <A HREF="https://elfhosted.com/app/xtremio/">IPTV with Stremio</A> (<I>Xtremio</I>)<BR/>
+               📺 Install a <A HREF="https://elfhosted.com/app/mediafusion/">Stremio Live TV addon</A> (<I>MediaFusion</I>)<BR/>
+               🏈 Watch recorded / live <A HREF="https://elfhosted.com/app/mediafusion/">sports with Stremio</A> (<I>MediaFusion</I>)
             </div>	              
                 <p>Click the button below to add the Formulio Addon to your Stremio<br>No debrid or config reqired</p>
             </div>
