--- a/apps/xtremio/branding/configure.html
+++ b/apps/xtremio/branding/configure.html
@@ -230,6 +230,7 @@ button:active {
 
      <br/>
       <p>We support the Stremio community (<A HREf="https://reddit.com/r/StremioAddons">Reddit</A> / <A HREF="https://discord.gg/zNRf6YF">Discord</A>) by providing free hosting for some of the <A HREF="https://elfhosted.com/stremio-addons/">best Stremio Addons</A>, including those which enable you to:</p>
+      <P>See the <A HREF='https://stremio-addons-guide.elfhosted.com/'>ElfHosted Stremio Addons Guide</A> for more addons!</P>
       <ul>
         <li>👨‍👩‍👦‍👦 <A HREF="https://elfhosted.com/app/comet/">Share your Real Debrid / Stremio from multiple locations at once</A> (<I>Comet</I>)</li>
         <li>🎁 Watch your paid <A HREF="https://elfhosted.com/app/xtremio/">IPTV with Stremio</A> (<I>Xtremio</I>)</li>
