--- a/apps/youriptv/branding/configure.html
+++ b/apps/youriptv/branding/configure.html
@@ -173,6 +173,22 @@ button:active {
       <h2 class="description"><%=MANIFEST.description%></h2>
       <div class="separator"></div>
 
+      <div class="elfhosted">
+         <p>
+             This is a free, public instance of the YourIPTV (<I>previously known as Xtremio</I>) addon, initially donated by <A HREF="https://elfhosted.com">ElfHosted</A>, but now independently maintained by <A HREF="https://hayd.uk">Hayduk</A>. Enjoy!
+         </p>
+     <h3>What is ElfHosted?</h3>
+     <div>
+     <p><a href="https://elfhosted.com/">ElfHosted</a> is an <a href="https://elfhosted.com/open/">open-source</a> platform for <A HREF="https://elfhosted.com/guides/media/">"self-hosting" Plex with Real Debrid</A> (<I>using <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex/">plex_debrid</A>, <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex-riven/">Riven</A>, or <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex-radarr-sonarr-prowlarr/">Radarr & Sonarr</A></I>), and your <a href="https://elfhosted.com/apps/">awesome self-hosted apps</a>, automatically and easily.</p>
+     <p>Among many other <A HREF="https://elfhosted.com/apps/">open-source apps</A>, ElfHosted offer private, subscription instances of the <A HREF="https://elfhosted.com/stremio-addons/">best Stremio Addons</A>, including those which enable you to:
+     </div>	
+        👨‍👩‍👦‍👦 <A HREF="https://elfhosted.com/app/comet/">Share your Real Debrid / Stremio from multiple locations at once</A> (<I>Comet</I>)<BR/>
+        🎁 Watch your paid <A HREF="https://elfhosted.com/app/youriptv/">IPTV with Stremio</A> (<I>YourIPTV</I>)<BR/>
+        📺 Install a <A HREF="https://elfhosted.com/app/mediafusion/">Stremio Live TV addon</A> (<I>MediaFusion</I>)<BR/>
+        🏈 Watch recorded / live <A HREF="https://elfhosted.com/app/mediafusion/">sports with Stremio</A> (<I>MediaFusion</I>)
+     </div>	
+
+
       <h3 class="gives">This addon has more :</h3>
       <ul>
          <li>Movies</li><li>Series</li><li>TV</li>
