--- a/apps/youriptv/branding/configure.html
+++ b/apps/youriptv/branding/configure.html
@@ -175,7 +175,7 @@ button:active {
 
       <div class="elfhosted">
          <p>
-             This is a free, public instance of the YourIPTV (<I>previously known as Xtremio</I>) addon, initially donated by <A HREF="https://elfhosted.com">ElfHosted</A>, but now independently maintained by <A HREF="https://hayd.uk">Hayduk</A>. Enjoy!
+             This is a free, public instance of the YourIPTV (<I>previously known as Xtremio</I>) addon, initially donated by <A HREF="https://elfhosted.com">ElfHosted</A>, but now independently maintained by <A HREF="https://hayd.uk">Hayduk</A>. Private, un-ratelimited, high-performance instances are <A HREF="https://store.elfhosted.com/product/youriptv">available from ElfHosted</A>.
          </p>
      <h3>What is ElfHosted?</h3>
      <div>
