--- a/apps/formulio/branding/index.html
+++ b/apps/formulio/branding/index.html
@@ -539,7 +539,7 @@
                         This is a free, public instance of the <a href="https://github.com/TheRaceDirector/formuliodev/">Formulio addon</a>, initially donated by <a href="https://elfhosted.com">ElfHosted</a>, but now independently maintained by <a href="https://hayd.uk">Hayduk</a> 
                         </p>
                         <p>
-                        ElfHosted have the best hosting infrastrucutre and support on the market! -- Stremio-Racer xxx
+                        ElfHosted have the best hosting setup, support, and community on the market! (ask <A HREF="https://www.trustpilot.com/review/elfhosted.com>TrustPilot</A>!) -- Stremio-Racer xxx
                         </p>
                         <h3>What is ElfHosted?</h3>
                         <p><a href="https://elfhosted.com/">ElfHosted</a> is an <a href="https://elfhosted.com/open/">open-source</a> platform for <a href="https://elfhosted.com/guides/media/">"self-hosting" Plex with Real Debrid</a> (<i>using <a href="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex/">plex_debrid</a>, <a href="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex-riven/">Riven</a>, or <a href="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex-radarr-sonarr-prowlarr/">Radarr & Sonarr</a></i>), and your <a href="https://elfhosted.com/apps/">awesome self-hosted apps</a>, automatically and easily.</p>
